2003-04-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Don't set TCL_DLL_FILE,
	TCL_LIB_FILE, TCL_STUB_LIB_FILE, TCL_STUB_LIB_FLAG,
	and TCL_BUILD_STUB_LIB_SPEC. These variables are
	already set in tclConfig.sh.
	[Bug 691908]

2003-03-22  Kevin Kenny  <kennykb@acm.org>

	* win/makefile.vc:
	* win/rules.vc: Corrected several problems that prevented
	OPTS=symbols from building properly. [Patch 707792] Thanks
	to Joe Mistachkin for the fixes.
	
2003-03-18  Don Porter  <dgp@users.sourceforge.net>

	* tests/unixWm.test (unixWm-41.2): Corrected typo in 2003-03-13
	commit.  Thanks Larry Virden.  [Bug 705567]

2003-03-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Makefile:
	* macosx/README: added support for giving 'make' the location
	of Tcl.framework and tclsh to build and link against.

	* macosx/tkMacOSXXStubs.c: fixed crash in [winfo server].

2003-03-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/msgbox.tcl (Tk::MessageBox): Stop buttons from being
	very wide when a messageBox has a lot of content. [Bug #701812]

2003-03-13  Don Porter  <dgp@users.sourceforge.net>

	* tests/unixWm.test:  Constrained all tests older than revision 1.21
	to run only on Unix.  Alternative approach did not match maintainer
	habits.
	* tests/spinbox.test (spinbox-17.4): Avoid long failure message.

2003-03-13  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Backed the version to 8.4 on the 8.4 branch.
	(I just loathe sticky tags).
	
2002-03-11  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Backported the code that makes the makefile
	build pkgIndex.tcl as part of the install step.
	
2003-03-03  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.2 TAGGED FOR RELEASE ***

2003-02-28  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/bind.test (bind-16.44): 
	* generic/tkBind.c (ExpandPercents): Only allow events to see